--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+```html
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -158,7 +159,19 @@
         <input id="fantasia" name="00NIa000000NlQQ" type="text" placeholder="Nome Fantasia" required>
       </div>
 
-      <!-- NOVOS CAMPOS DE ENDEREÇO VIA CEP -->
+      <div class="form-group">
+        <input id="first_name" name="first_name" type="text" placeholder="Primeiro Nome" required>
+      </div>
+
+      <div class="form-group">
+        <input id="last_name" name="last_name" type="text" placeholder="Sobrenome" required>
+      </div>
+
+      <div class="form-group full">
+        <input id="email" name="email" type="email" placeholder="Email" required>
+        <div class="error">Digite um e-mail válido.</div>
+      </div>
+
       <div class="form-group">
         <input id="cep" name="cep" type="text" maxlength="9" placeholder="CEP" required>
         <div class="error">Digite um CEP válido.</div>
@@ -186,19 +199,6 @@
 
       <div class="form-group">
         <input id="estado" name="estado" type="text" placeholder="Estado" readonly required>
-      </div>
-
-      <div class="form-group">
-        <input id="first_name" name="first_name" type="text" placeholder="Primeiro Nome" required>
-      </div>
-
-      <div class="form-group">
-        <input id="last_name" name="last_name" type="text" placeholder="Sobrenome" required>
-      </div>
-
-      <div class="form-group">
-        <input id="email" name="email" type="email" placeholder="Email" required>
-        <div class="error">Digite um e-mail válido.</div>
       </div>
 
       <div class="form-group full">
@@ -433,3 +433,4 @@
   </script>
 </body>
 </html>
+```
