--- a/index.html
+++ b/index.html
@@ -291,6 +291,10 @@
         </div>
       </div>
 
+      <div class="form-group full" id="responsavelComercialGroup" style="display:none;">
+        <input id="responsavel_comercial" name="responsavel_comercial" type="text" placeholder="Responsável Comercial: Zurich">
+      </div>
+
       <button type="submit" class="submit-button">Enviar Cadastro</button>
     </form>
   </div>
@@ -314,7 +318,15 @@
               const nomes = socio.nome.split(" ");
               document.getElementById('first_name').value = nomes.slice(0, -1).join(" ");
               document.getElementById('last_name').value = nomes.slice(-1).join(" ");
+              document.getElementById('responsavelComercialGroup').style.display = 'block';
+              document.getElementById('responsavel_comercial').value = "Zurich";
+            } else {
+              document.getElementById('responsavelComercialGroup').style.display = 'none';
+              document.getElementById('responsavel_comercial').value = "";
             }
+          } else {
+            document.getElementById('responsavelComercialGroup').style.display = 'none';
+            document.getElementById('responsavel_comercial').value = "";
           }
 
           if (data.estabelecimento?.email) {
@@ -356,7 +368,6 @@
       const erp_extraGroup = document.getElementById("erp_extraGroup");
       const calendarEmbedContainer = document.getElementById("calendarEmbedContainer");
 
-      // Máscara do CNPJ
       document.getElementById("cnpj").addEventListener("input", function(e) {
         let v = e.target.value.replace(/\D/g, "");
         v = v.replace(/^(\d{2})(\d)/, "$1.$2");
@@ -370,7 +381,6 @@
         buscarCNPJ(this.value);
       });
 
-      // Máscara do CEP
       document.getElementById("cep").addEventListener("input", function(e) {
         let v = e.target.value.replace(/\D/g, "");
         if (v.length > 5) v = v.replace(/^(\d{5})(\d)/, "$1-$2");
