--- a/index.html
+++ b/index.html
@@ -61,14 +61,6 @@
       transition: border-color 0.2s, box-shadow 0.2s;
       box-sizing: border-box;
     }
-    input::placeholder, textarea::placeholder {
-      color: #9aa0a6;
-    }
-    input:focus, select:focus, textarea:focus {
-      border-color: #0073ff;
-      box-shadow: 0 0 0 3px rgba(0,115,255,0.2);
-      outline: none;
-    }
     .submit-button {
       background: #0073ff;
       color: white;
@@ -81,26 +73,6 @@
       width: 220px;
       margin: 30px auto 0;
       display: block;
-      transition: background 0.2s;
-    }
-    .submit-button:hover {
-      background: #005dd1;
-    }
-    .error {
-      color: #d93025;
-      font-size: 0.85em;
-      display: none;
-      margin-top: 4px;
-    }
-    .radio-group {
-      display: flex;
-      gap: 30px;
-      margin-top: 12px;
-      align-items: center;
-    }
-    .radio-group label {
-      font-size: 14px;
-      color: #333;
     }
     .calendar-wrapper {
       position: relative;
@@ -119,17 +91,6 @@
       border: none;
       background: #fff;
     }
-    @media (max-width: 768px) {
-      .form-group {
-        flex: 1 1 100%;
-      }
-      .submit-button {
-        width: 100%;
-      }
-      .calendar-wrapper {
-        padding-bottom: 120%;
-      }
-    }
   </style>
 </head>
 <body>
@@ -146,67 +107,68 @@
       <input type="hidden" id="company" name="company" value="" />
 
       <div class="form-group full">
-        <input id="cnpj" name="00NSG00000QKAKR" maxlength="18" type="text" placeholder="CNPJ" required>
-        <div class="error">Digite um CNPJ válido.</div>
+        <input id="cnpj" name="00NSG00000QKAKR" maxlength="18" type="text" placeholder="CNPJ Corretora" required>
       </div>
 
       <div class="form-group">
-        <input id="razao_social" name="00NSG00000QKCIz" type="text" placeholder="Razão Social" required>
+        <input id="razao_social" name="00NSG00000QKCIz" type="text" placeholder="Razão Social Corretora" required>
       </div>
 
       <div class="form-group">
-        <input id="fantasia" name="00NIa000000NlQQ" type="text" placeholder="Nome Fantasia" required>
+        <input id="fantasia" name="00NIa000000NlQQ" type="text" placeholder="Nome Fantasia Corretora" required>
       </div>
 
-      <div class="form-group">
-        <input id="first_name" name="first_name" type="text" placeholder="Primeiro Nome" required>
+      <div class="form-group" id="firstNameGroup" style="display:none;">
+        <input id="first_name" name="first_name" type="text" placeholder="Primeiro Nome Corretora">
       </div>
 
-      <div class="form-group">
-        <input id="last_name" name="last_name" type="text" placeholder="Sobrenome" required>
+      <div class="form-group" id="lastNameGroup" style="display:none;">
+        <input id="last_name" name="last_name" type="text" placeholder="Sobrenome Corretora">
       </div>
 
       <div class="form-group full">
-        <input id="email" name="email" type="email" placeholder="Email" required>
-        <div class="error">Digite um e-mail válido.</div>
+        <input id="email" name="email" type="email" placeholder="Email Corretora" required>
       </div>
 
       <div class="form-group">
-        <input id="cep" name="cep" type="text" maxlength="9" placeholder="CEP" required>
-        <div class="error">Digite um CEP válido.</div>
+        <input id="cpf_comercial" name="cpf_comercial" type="text" placeholder="CPF/Comercial Zurich" required>
+      </div>
+
+      <div class="form-group">
+        <input id="cep" name="cep" type="text" maxlength="9" placeholder="CEP Corretora" required>
       </div>
 
       <div class="form-group full">
-        <input id="logradouro" name="street" type="text" placeholder="Logradouro" readonly required>
+        <input id="logradouro" name="street" type="text" placeholder="Logradouro Corretora" readonly required>
       </div>
 
       <div class="form-group">
-        <input id="numero" name="numero" type="text" placeholder="Número" required>
+        <input id="numero" name="numero" type="text" placeholder="Número Corretora" required>
       </div>
 
       <div class="form-group">
-        <input id="complemento" name="complemento" type="text" placeholder="Complemento">
+        <input id="complemento" name="complemento" type="text" placeholder="Complemento Corretora">
       </div>
 
       <div class="form-group">
-        <input id="bairro" name="bairro" type="text" placeholder="Bairro" readonly required>
+        <input id="bairro" name="bairro" type="text" placeholder="Bairro Corretora" readonly required>
       </div>
 
       <div class="form-group">
-        <input id="cidade" name="cidade" type="text" placeholder="Cidade" readonly required>
+        <input id="cidade" name="cidade" type="text" placeholder="Cidade Corretora" readonly required>
       </div>
 
       <div class="form-group">
-        <input id="estado" name="estado" type="text" placeholder="Estado" readonly required>
+        <input id="estado" name="estado" type="text" placeholder="Estado Corretora" readonly required>
       </div>
 
       <div class="form-group full">
-        <input id="responsavel" name="00NSG00000QKgtm" type="text" placeholder="Responsável" required>
+        <input id="responsavel" name="00NSG00000QKgtm" type="text" placeholder="Responsável Corretora" required>
       </div>
 
       <div class="form-group">
         <select id="cargo" name="00NSG00000QKGWI" required>
-          <option value="">Cargo</option>
+          <option value="">Cargo Corretora</option>
           <option value="Proprietário">Proprietário</option>
           <option value="Diretor">Diretor</option>
           <option value="Gerente">Gerente</option>
@@ -215,68 +177,59 @@
       </div>
 
       <div class="form-group">
-        <input id="imobiliarias" name="00N6A00000NUmQa" type="number" min="1" placeholder="Qtd. Imobiliárias" required>
+        <input id="imobiliarias" name="00N6A00000NUmQa" type="number" min="1" placeholder="Qtd. Imobiliárias Corretora" required>
       </div>
 
       <div class="form-group">
-        <input id="incendio" name="00NSG00000QGVKd" type="number" step="0.01" placeholder="Produção Mensal Incêndio">
+        <input id="incendio" name="00NSG00000QGVKd" type="number" step="0.01" placeholder="Produção Mensal Incêndio Corretora">
       </div>
 
       <div class="form-group">
-        <input id="seguradora_incendio" name="Seguradora_principal_Incendio__c" type="text" placeholder="Seguradora principal - Incêndio">
+        <input id="seguradora_incendio" name="Seguradora_principal_Incendio__c" type="text" placeholder="Seguradora principal - Incêndio Corretora">
       </div>
 
       <div class="form-group">
-        <input id="fianca" name="00NSG00000QGgQv" type="number" step="0.01" placeholder="Produção Mensal Fiança">
+        <input id="fianca" name="00NSG00000QGgQv" type="number" step="0.01" placeholder="Produção Mensal Fiança Corretora">
       </div>
 
       <div class="form-group">
-        <input id="seguradora_fianca" name="Seguradora_principal_Fianca__c" type="text" placeholder="Seguradora principal - Fiança">
+        <input id="seguradora_fianca" name="Seguradora_principal_Fianca__c" type="text" placeholder="Seguradora principal - Fiança Corretora">
       </div>
 
       <div class="form-group">
-        <input id="capitalizacao" name="00NSG00000QGe4A" type="number" step="0.01" placeholder="Produção Mensal Capitalização">
+        <input id="capitalizacao" name="00NSG00000QGe4A" type="number" step="0.01" placeholder="Produção Mensal Capitalização Corretora">
       </div>
 
       <div class="form-group">
-        <input id="seguradora_capitalizacao" name="Seguradora_principal_Tit_Capitalizacao__c" type="text" placeholder="Seguradora principal - Tit Capitalização">
+        <input id="seguradora_capitalizacao" name="Seguradora_principal_Tit_Capitalizacao__c" type="text" placeholder="Seguradora principal - Tit Capitalização Corretora">
       </div>
 
       <div class="section">
         <div class="form-group">
           <select id="plataforma" name="00NSG00000QGcb4">
-            <option value="">Tem plataforma própria?</option>
+            <option value="">Tem plataforma própria? Corretora</option>
             <option value="Sim">Sim</option>
             <option value="Não">Não</option>
           </select>
         </div>
-
         <div class="form-group full" id="siteGroup" style="display:none;">
-          <input id="site" name="00NSG00000QGjlN" type="url" placeholder="Endereço do site">
+          <input id="site" name="00NSG00000QGjlN" type="url" placeholder="Endereço do site Corretora">
         </div>
       </div>
 
       <div class="section">
         <div class="form-group">
           <select id="erp" name="00NSG00000QGYvd">
-            <option value="">Parceria com ERP?</option>
+            <option value="">Parceria com ERP? Corretora</option>
             <option value="Sim">Sim</option>
             <option value="Não">Não</option>
           </select>
         </div>
-
         <div class="form-group full" id="erp_nomeGroup" style="display:none;">
-          <input id="erp_nome" name="00NSG00000QGgKU" type="text" placeholder="ERP Utilizado">
+          <input id="erp_nome" name="00NSG00000QGgKU" type="text" placeholder="ERP Utilizado Corretora">
         </div>
-
         <div class="form-group full" id="erp_extraGroup" style="display:none;">
-          <input id="erp_extra" name="ERP_para_gerenciamento" type="text" placeholder="ERP para gerenciamento de seguros">
-        </div>
-      </div>
-
-      <div class="section" id="responsavelComercialSection" style="display:none;">
-        <div class="form-group full">
-          <input id="responsavel_comercial" name="responsavel_comercial" type="text" placeholder="Responsável Comercial: Zurich">
+          <input id="erp_extra" name="ERP_para_gerenciamento" type="text" placeholder="ERP para gerenciamento de seguros Corretora">
         </div>
       </div>
 
@@ -288,10 +241,12 @@
             <label><input type="radio" name="agendar_reuniao" value="nao" checked> Não</label>
           </div>
         </div>
-
         <div id="calendarEmbedContainer" style="display:none;">
           <div class="calendar-wrapper">
             <iframe src="https://calendar.app.google/B54Z6pKjMCbgjTUv9" allowfullscreen></iframe>
+          </div>
+          <div class="calendar-wrapper" style="margin-top:20px;">
+            <iframe src="https://calendar.app.google/U5oztqWefrCVZr6z9" allowfullscreen></iframe>
           </div>
         </div>
       </div>
@@ -308,31 +263,24 @@
         const response = await fetch(`https://publica.cnpj.ws/cnpj/${sanitized}`);
         const data = await response.json();
 
-        if (data.razao_social) {
-          document.getElementById('razao_social').value = data.razao_social || '';
-          document.getElementById('fantasia').value = data.nome_fantasia || data.razao_social || '';
-          document.getElementById('company').value = data.razao_social || '';
-
-          if (data.qsa && data.qsa.length > 0) {
-            const socio = data.qsa.find(s => s.qualificacao?.includes("Sócio") || s.qualificacao?.includes("Administrador")) || data.qsa[0];
-            if (socio && socio.nome) {
-              const nomes = socio.nome.split(" ");
-              document.getElementById('first_name').value = nomes.slice(0, -1).join(" ");
-              document.getElementById('last_name').value = nomes.slice(-1).join(" ");
-              document.getElementById('responsavelComercialSection').style.display = 'block';
-              document.getElementById('responsavel_comercial').value = "Zurich";
-            } else {
-              document.getElementById('responsavelComercialSection').style.display = 'none';
-              document.getElementById('responsavel_comercial').value = "";
-            }
-          } else {
-            document.getElementById('responsavelComercialSection').style.display = 'none';
-            document.getElementById('responsavel_comercial').value = "";
+        if (data.qsa && data.qsa.length > 0) {
+          const socio = data.qsa.find(s => s.qualificacao?.includes("Sócio") || s.qualificacao?.includes("Administrador")) || data.qsa[0];
+          if (socio && socio.nome) {
+            const nomes = socio.nome.split(" ");
+            document.getElementById('firstNameGroup').style.display = 'block';
+            document.getElementById('lastNameGroup').style.display = 'block';
+            document.getElementById('first_name').value = nomes.slice(0, -1).join(" ");
+            document.getElementById('last_name').value = nomes.slice(-1).join(" ");
           }
+        } else {
+          document.getElementById('firstNameGroup').style.display = 'none';
+          document.getElementById('lastNameGroup').style.display = 'none';
+          document.getElementById('first_name').value = "";
+          document.getElementById('last_name').value = "";
+        }
 
-          if (data.estabelecimento?.email) {
-            document.getElementById('email').value = data.estabelecimento.email;
-          }
+        if (data.estabelecimento?.email) {
+          document.getElementById('email').value = data.estabelecimento.email;
         }
       } catch (error) {
         console.error('Erro ao buscar CNPJ:', error);
@@ -342,18 +290,14 @@
     async function buscarCEP(cep) {
       const sanitized = cep.replace(/\D/g, "");
       if (sanitized.length !== 8) return;
-
       try {
         const response = await fetch(`https://viacep.com.br/ws/${sanitized}/json/`);
         const data = await response.json();
-
         if (!data.erro) {
           document.getElementById('logradouro').value = data.logradouro || '';
           document.getElementById('bairro').value = data.bairro || '';
           document.getElementById('cidade').value = data.localidade || '';
           document.getElementById('estado').value = data.uf || '';
-        } else {
-          alert("CEP não encontrado.");
         }
       } catch (error) {
         console.error('Erro ao buscar CEP:', error);
@@ -361,84 +305,16 @@
     }
 
     document.addEventListener('DOMContentLoaded', () => {
-      const form = document.getElementById("leadForm");
-      const plataformaSelect = document.getElementById("plataforma");
-      const erpSelect = document.getElementById("erp");
-      const siteGroup = document.getElementById("siteGroup");
-      const erp_nomeGroup = document.getElementById("erp_nomeGroup");
-      const erp_extraGroup = document.getElementById("erp_extraGroup");
-      const calendarEmbedContainer = document.getElementById("calendarEmbedContainer");
-
-      document.getElementById("cnpj").addEventListener("input", function(e) {
-        let v = e.target.value.replace(/\D/g, "");
-        v = v.replace(/^(\d{2})(\d)/, "$1.$2");
-        v = v.replace(/^(\d{2})\.(\d{3})(\d)/, "$1.$2.$3");
-        v = v.replace(/\.(\d{3})(\d)/, ".$1/$2");
-        v = v.replace(/(\d{4})(\d)/, "$1-$2");
-        e.target.value = v;
-      });
-
       document.getElementById('cnpj').addEventListener('blur', function () {
         buscarCNPJ(this.value);
       });
-
-      document.getElementById("cep").addEventListener("input", function(e) {
-        let v = e.target.value.replace(/\D/g, "");
-        if (v.length > 5) v = v.replace(/^(\d{5})(\d)/, "$1-$2");
-        e.target.value = v;
-      });
-
       document.getElementById('cep').addEventListener('blur', function () {
         buscarCEP(this.value);
       });
-
-      plataformaSelect?.addEventListener('change', function() {
-        siteGroup.style.display = (this.value === "Sim") ? 'block' : 'none';
-      });
-
-      erpSelect?.addEventListener('change', function() {
-        if (this.value === "Sim") {
-          erp_nomeGroup.style.display = 'block';
-          erp_extraGroup.style.display = 'block';
-        } else {
-          erp_nomeGroup.style.display = 'none';
-          erp_extraGroup.style.display = 'none';
-        }
-      });
-
       document.querySelectorAll('input[name="agendar_reuniao"]').forEach(radio => {
         radio.addEventListener('change', function() {
-          calendarEmbedContainer.style.display = (this.value === 'sim') ? 'block' : 'none';
+          document.getElementById("calendarEmbedContainer").style.display = (this.value === 'sim') ? 'block' : 'none';
         });
-      });
-
-      form.addEventListener("submit", function(e) {
-        let valid = true;
-        const requiredFields = form.querySelectorAll("input[required], textarea[required], select[required]");
-        requiredFields.forEach(field => {
-          const errorEl = field.nextElementSibling;
-          if (field.value.trim() === "") {
-            if (errorEl && errorEl.classList.contains("error")) {
-              errorEl.textContent = "Este campo é obrigatório.";
-              errorEl.style.display = "block";
-            }
-            valid = false;
-          } else {
-            if (errorEl && errorEl.classList.contains("error")) {
-              errorEl.style.display = "none";
-            }
-          }
-        });
-        const email = document.getElementById("email");
-        const emailError = email.nextElementSibling;
-        if (!/^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email.value)) {
-          emailError.textContent = "Digite um e-mail válido.";
-          emailError.style.display = "block";
-          valid = false;
-        } else {
-          emailError.style.display = "none";
-        }
-        if (!valid) e.preventDefault();
       });
     });
   </script>
